--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,8 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install docs dependency
+        run: sudo apt-get update && sudo apt-get install -y doxygen
+
       - name: Verify (toolchain)
         run: ./tools/bin/yai-cli-verify --profile ci
