ci(governance): consume yai-infra workflows (wrappers only)

--- a/.github/workflows/project-status-sync.yml
+++ b/.github/workflows/project-status-sync.yml
@@ -8,7 +8,6 @@ jobs:
   sync:
     uses: yai-labs/yai-infra/.github/workflows/reusable-project-status-sync.yml@main
     with:
-      project_owner: yai-labs
+      org: yai-labs
       project_number: 5
-    secrets:
-      project_token: ${{ secrets.YAI_PROJECT_TOKEN }}
+    secrets: inherit
