ci(governance): pin infra governance suite to gov-suite-v0.1.0

--- a/.github/workflows/governance-pr.yml
+++ b/.github/workflows/governance-pr.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   governance-suite:
-    uses: yai-labs/yai-infra/.github/workflows/reusable-governance-suite.yml@main
+    uses: yai-labs/yai-infra/.github/workflows/reusable-governance-suite.yml@gov-suite-v0.1.0
     with:
       org: yai-labs
       project_number: 5
