--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/yai-sdk"]
 	path = deps/yai-sdk
 	url = https://github.com/yai-labs/yai-sdk.git
+[submodule "deps/yai-law"]
+	path = deps/yai-law
+	url = https://github.com/yai-labs/yai-law.git
